fix(push-ui): fix callback actions spacing

--- a/packages/notificare-push-ui/css/notifications/alert.css
+++ b/packages/notificare-push-ui/css/notifications/alert.css
@@ -51,6 +51,7 @@
 .notificare .notificare__modal-footer__callback {
     display: flex;
     justify-content: right;
+    column-gap: 8px;
 }
 
 /* Callback: Camera */
